added simple test functionality for web interface
added simple html
added possibility to show, create, delete and alter an event
added the needed apache confic file for the used routing

--- a/Events.htm
+++ b/Events.htm
@@ -6,16 +6,21 @@
 </head>
 <body>
 
-    <h1> Hallo Welt </h1>
-    <p> Eingeloggt als [@USER]</p>
+    <h1>Termine</h1>
+    <p> Eingeloggt als [@USER] </p>
     <table>
         <tr>
-            <th>Name</th>
-            <th>Datum</th>
+            <th>Datum</th> 
             <th>Uhrzeit</th>
+            <th>Name</th>
+            <th></th>
+            <th></th>
         </tr>
 [@TABLE]
     </table>
+    <form name="Test" action="/menue" method=post>
+        <input type="submit" value="zurück zum Menü">
+    </form>
 
 </body>
 </html>
